# planus

./: .gitattributes  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  RELEASE-CHECKLIST.md  flake.nix  foo.rs  regenerate.sh  shell.nix
array-init-cursor/: Cargo.toml
array-init-cursor/src/: lib.rs  util.rs
crates/array-init-cursor/: Cargo.toml
crates/array-init-cursor/src/: lib.rs  util.rs
crates/planus/: Cargo.toml
crates/planus-buffer-inspection/: Cargo.toml
crates/planus-buffer-inspection/src/: allocations.rs  children.rs  lib.rs  object_formatting.rs  object_info.rs  object_mapping.rs
crates/planus-cli/: Cargo.toml  askama.toml
crates/planus-cli/src/: ast_map.rs  grammar.lalrpop  main.rs
crates/planus-codegen/: Cargo.toml
crates/planus-codegen/src/: analysis.rs  backend.rs  backend_translation.rs  lib.rs  templates.rs
crates/planus-inspector/: Cargo.toml  todo.txt
crates/planus-inspector/src/: app.rs  lib.rs  main.rs  ui.rs  vec_with_index.rs
crates/planus-lexer/: Cargo.toml
crates/planus-lexer/src/: error.rs  full_lexer.rs  lib.rs  raw_lexer.rs  text_lexer.rs
crates/planus-translation/: Cargo.toml
crates/planus-translation/src/: ast_convert.rs  ctx.rs  error.rs  lib.rs  pretty_print.rs
crates/planus-types/: Cargo.toml
crates/planus-types/src/: ast.rs  cst.rs  intermediate.rs  lib.rs
crates/planus/src/: backvec.rs  builder.rs  builder_cache.rs  errors.rs  lib.rs  slice_helpers.rs  table_reader.rs  table_writer.rs
examples/rust/: .gitignore  Cargo.toml  README.md  monster.dot  monster.fbs
examples/rust/examples/: api_example.rs  from_json.rs  print.rs  to_json.rs
examples/rust/src/: lib.rs  monster_generated.rs
planus/: Cargo.toml
planus-cli/: Cargo.toml
planus-cli/src/: ast_map.rs  ctx.rs  error.rs  grammar.lalrpop  grammar_helper.rs
planus-cli/src/app/: check.rs  dot.rs  format.rs  gen_completions.rs  mod.rs  rust.rs
planus-cli/src/ast/: convert.rs  mod.rs  print.rs  types.rs
planus-cli/src/codegen/: backend.rs  backend_translation.rs  mod.rs  rust.rs
planus-cli/src/cst/: pretty_print.rs  types.rs
planus-cli/src/intermediate_language/: analysis.rs  mod.rs  translation.rs  types.rs
planus-cli/src/lexer/: full_lexer.rs  mod.rs  raw_lexer.rs  text_lexer.rs
planus-cli/src/util/: sorted_map.rs
planus/src/: backvec.rs  buffer.rs  builder.rs  builder_cache.rs  errors.rs  lib.rs  slice_helpers.rs  table_reader.rs  table_writer.rs  vectors.rs
planus/src/impls/: array.rs  bool_.rs  box_.rs  bstr_deserialize.rs  bstr_serialize.rs  bstring_serialize.rs  byte_slice.rs  mod.rs  offset.rs  option.rs  planus_vectors.rs  primitives.rs  ref_.rs  result.rs  slice.rs  str.rs  string.rs  unit.rs  vec.rs
planus/src/traits/: mod.rs
planus/src/vectors/: iterators.rs  vector.rs
planus_cli/: Cargo.toml  evolution_v1.fbs  foo.fbs  foo.rs
planus_cli/src/: ast_map.rs  ctx.rs  error.rs  grammar.lalrpop  lib.rs
planus_cli/src/app/: mod.rs
planus_cli/src/ast/: convert.rs  print.rs  types.rs
planus_cli/src/codegen/: backend.rs  backend_translation.rs  mod.rs  name_generator.rs  rust.rs  rust2.rs  templates.rs
planus_cli/src/cst/: mod.rs  pretty_print.rs  types.rs
planus_cli/src/intermediate_language/: mod.rs  translation.rs  types.rs
planus_cli/src/lexer/: full_lexer.rs  raw_lexer.rs  text_lexer.rs
planus_cli/src/util/: mod.rs  sorted_map.rs
planus_cli/templates/: enum.template  namespace.template  struct.template  table.template  union.template
planus_cli/templates/rust/: enum.template  struct.template  table.template  union.template
test/: Cargo.toml
test/files/formatting-tests/: comment_test.fbs
test/files/ignore-unknown-metadata/: unknown_metadata_everywhere.fbs
test/files/invalid/: aligned.fbs  aligned.stderr  array.stderr  array_in_table.fbs  array_in_table.stderr  array_sizes.fbs  array_sizes.stderr  array_support.fbs  array_support.stderr  array_syntax_error.fbs  array_syntax_error.stderr  attribute_twice.fbs  attribute_twice.stderr  bad_attributes_struct.fbs  bad_attributes_struct.stderr  bad_end_of_string.fbs  bad_end_of_string.stderr  bad_field_ids.fbs  bad_field_ids.stderr  bad_include_namespace.fbs  bad_include_namespace.stderr  bad_token.fbs  bad_token.stderr  bad_token_recovery.fbs  bad_token_recovery.stderr  bad_type.fbs  bad_type.stderr  bad_union_types.fbs  bad_union_types.stderr  bad_vector_types.fbs  bad_vector_types.stderr  comment_test.stderr  custom_attributes.fbs  custom_attributes.stderr  defined_twice.fbs  defined_twice.stderr  defined_twice_namespace.fbs  defined_twice_namespace.stderr  defined_twice_namespace_inner.fbs  defined_twice_namespace_inner.stderr  (+110 more)
test/files/test/: conformance.fbs  enums.fbs  structs.fbs  unions.fbs  vectors.fbs
test/files/valid/: actions.fbs  aligned.fbs  docstrings.fbs  field_ids.fbs  include1.fbs  include2.fbs  include_test1.fbs  include_test2.fbs  include_test3.fbs  issue_285.fbs  keyword_identifiers.fbs  more_defaults.fbs  rpc_service.fbs  struct_forced_alignment.fbs  table_field_forced_alignment.fbs  union.fbs  windows_newline.fbs
test/rust/: Cargo.toml  build.rs
test/rust-compat/: Cargo.toml  api_files  test_files  test_files_no_flatc
test/rust-compat/src/: lib.rs
test/rust-test-2018/: Cargo.toml  benches  build.rs  test_files  test_files_no_flatc
test/rust-test-2018/src/: lib.rs  macros.rs
test/rust-test-2021/: .gitattributes  Cargo.toml  api_files  build.rs
test/rust-test-2021/api_files/: bit_flags_enum.fbs  bit_flags_enum.rs  file_identifier.fbs  file_identifier.rs  include_test1.fbs  infallible_conversions.rs  keyword_identifiers.fbs  keyword_identifiers.rs  reference_comparisons.rs  rpc_service.fbs  rpc_service.rs  struct_arrays.fbs  struct_arrays.rs  structs.fbs  table_deprecated.fbs  table_deprecated.rs  table_empty.fbs  table_enum.fbs  table_float.fbs  table_number.rs  table_struct.fbs  table_table.fbs  table_table.rs  (+15 more)
test/rust-test-2024/: Cargo.toml  api_files  build.rs  src
test/rust_test/: Cargo.toml  build.rs  table_vector_enum_generated.rs  table_vector_string_generated.rs
(+526 files in other folders)
