[workspace]
members = ["crates/*", "examples/rust"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/planus-org/planus"
rust-version = "1.75"
version = "1.2.0"

[workspace.dependencies]
askama = "0.12"
bitflags = "2.9.4"
clap = { version = "4.5.48", features = ["derive", "color"] }
clap_complete = "4.5.58"
codespan = "0.12.0"
codespan-reporting = "0.12.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
derive_more = "2.0.1"
eyre = "0.6.12"
fuzzy-matcher = "0.3.7"
hashbrown = "0.16.0"
heck = "0.5.0"
indexmap = "2.11.4"
lalrpop = "0.22.2"
lalrpop-util = "0.22.2"
logos = "0.15.1"
num-traits = "0.2.19"
rand = "0.9.2"
random_color = "1.1.0"
rust-lapper = "1.2.0"
serde = { version = "1.0.226", default-features = false }
serde_json = "1.0.145"
static_assertions = "1.1.0"
string-interner = "0.19.0"
thiserror = "2.0.16"
tui = "0.19.0"
vec_map = "0.8.2"

# Our crates
array-init-cursor = { version = "0.2.1", path = "crates/array-init-cursor" }
planus = { version = "1.2.0", path = "crates/planus", default-features = false }
planus-buffer-inspection = { version = "1.2.0", path = "crates/planus-buffer-inspection" }
planus-codegen = { version = "1.2.0", path = "crates/planus-codegen" }
planus-inspector = { version = "1.2.0", path = "crates/planus-inspector" }
planus-lexer = { version = "1.2.0", path = "crates/planus-lexer" }
planus-translation = { version = "1.2.0", path = "crates/planus-translation" }
planus-types = { version = "1.2.0", path = "crates/planus-types" }

# used for doctests
planus-example = { path = "examples/rust" }
