[package]
name = "planus-cli"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/planus-org/planus"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
readme = "../README.md"
rust-version = "1.57"
include = ["templates", "/src", "askama.toml", "build.rs"]
description = "Command-line utility for planus."

[dependencies]
anyhow = "1.0.40"
askama = "0.11"
atty = "0.2.14"
bitflags = "1.2.1"
clap = { version = "4.0.6", features = ["derive", "deprecated"] }
clap_complete = "3.0.6"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
derive_more = "0.99.14"
heck = "0.4.0"
indexmap = "1.7.0"
lalrpop-util = "0.19.5"
logos = "0.12.0"
num-traits = "0.2.14"
random_color = "0.6.1"
regex = "1.5.4"
string-interner = "0.14.0"
thiserror = "1.0.24"
vec_map = "0.8.2"

[build-dependencies]
derive_more = "0.99.14"
lalrpop = "0.19.5"

[dev-dependencies]
rand = "0.8.4"

[lib]

[[bin]]
name = "planus"
