[package]
name = "planus_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
askama = { git = "https://github.com/djc/askama", branch = "main" }
bitflags = "1.2.1"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
derive_more = "0.99.14"
heck = "0.3.3"
indexmap = "1.7.0"
lalrpop-util = "0.19.5"
logos = "0.12.0"
num-traits = "0.2.14"
paw = "1.0.0"
regex = "1.5.4"
string-interner = "0.12.2"
structopt = { version = "0.3.21", features = ["paw"] }
thiserror = "1.0.24"

[build-dependencies]
derive_more = "0.99.14"
lalrpop = "0.19.5"

[[bin]]
name = "parse_file"
path = "src/bin/parse_file.rs"

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dev-dependencies]
rand = "0.8.4"
