[workspace]
members = ["rust-test-*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
repository = "https://github.com/planus-org/planus"
license = "MIT/Apache-2.0"

[workspace.dependencies]
color-eyre = "0.6.5"
criterion = "0.8.1"
flatbuffers = { version = "=24.3.25", git = "https://github.com/google/flatbuffers.git", tag = "v24.3.25" }
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = "1.0.149"
similar-asserts = "1.7.0"
static_assertions = "1.1.0"

# Our crates
planus = { path = "../crates/planus", default-features = false, features = [
  "extra-validation",
] }
planus-codegen = { path = "../crates/planus-codegen" }
planus-translation = { path = "../crates/planus-translation" }
