[workspace]
members = ["rust-test-*"]
resolver = "2"

[workspace.package]
version = "1.0.0"
repository = "https://github.com/planus-org/planus"
license = "MIT/Apache-2.0"

[workspace.dependencies]
color-eyre = "0.6.5"
criterion = "0.8.2"
# Keep this version in sync with EXPECTED_FLATC_VERSION in test/rust-test-*/build.rs and with
# `flatbuffers` in flake.nix. `flatc` and the flatbuffers crate must match — generated Rust code
# is version-specific.
flatbuffers = { version = "=25.12.19", git = "https://github.com/google/flatbuffers.git", tag = "v25.12.19" }
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = "1.0.150"
similar-asserts = "2.0.0"
static_assertions = "1.1.0"

# Our crates
planus = { path = "../crates/planus", default-features = false, features = [
  "extra-validation",
] }
planus-codegen = { path = "../crates/planus-codegen" }
planus-translation = { path = "../crates/planus-translation" }
