[package]
name = "array-init-cursor"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["abstraction", "initialization", "no_std"]
categories = ["data-structures", "no-std"]
rust-version.workspace = true
description = "Utility crate to help keep track of arrays of MaybeUninit"
