[package]
name = "planus-buffer-inspection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal buffer inspection library for planus."

[dependencies]
indexmap = "1.9.2"
planus-types = { version = "0.4.0", path = "../planus-types" }
rust-lapper = "1.1.0"
