[package]
name = "planus-buffer-inspection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal buffer inspection library for planus."

[dependencies]
indexmap.workspace = true
rust-lapper.workspace = true

# Our crates
planus-types.workspace = true
