[package]
name = "planus-cli"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/planus-org/planus"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
readme = "../README.md"
rust-version = "1.61"
description = "Command-line utility for planus."

[[bin]]
name = "planus"
path = "src/main.rs"

[dependencies]
planus-codegen = { version = "0.3.1", path = "../planus-codegen" }
planus-translation = { version = "0.3.1", path = "../planus-translation" }
planus-lexer = { version = "0.3.1", path = "../planus-lexer" }
planus-types = { version = "0.3.1", path = "../planus-types" }
planus-inspector = { version = "0.3.1", path = "../planus-inspector" }
clap = { version = "3.2.25", features = ["derive", "deprecated"] }
clap_complete = "3.2.5"
codespan = "0.11.1"
color-eyre = "0.6.2"
