[package]
name = "planus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
readme = "../README.md"
rust-version.workspace = true
description = "Command-line utility for planus."

[[bin]]
name = "planus"
path = "src/main.rs"

[dependencies]
planus-codegen = { version = "0.4.0", path = "../planus-codegen" }
planus-translation = { version = "0.4.0", path = "../planus-translation" }
planus-lexer = { version = "0.4.0", path = "../planus-lexer" }
planus-types = { version = "0.4.0", path = "../planus-types" }
planus-inspector = { version = "0.4.0", path = "../planus-inspector" }
clap = { version = "3.2.25", features = ["derive", "deprecated"] }
clap_complete = "3.2.5"
codespan = "0.11.1"
color-eyre = "0.6.2"
