[package]
name = "planus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
readme = "../../README.md"
rust-version.workspace = true
description = "Command-line utility for planus."

[[bin]]
name = "planus"
path = "src/main.rs"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
codespan.workspace = true
color-eyre.workspace = true

# Our crates
planus-codegen.workspace = true
planus-inspector.workspace = true
planus-lexer.workspace = true
planus-translation.workspace = true
planus-types.workspace = true
