[package]
name = "planus-codegen"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/planus-org/planus"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version = "1.61"
description = "Internal codegen library for planus."

[dependencies]
planus-types = { version = "0.3.1", path = "../planus-types" }
askama = "0.11"
heck = "0.4.1"
vec_map = "0.8.2"
random_color = "0.6.1"
thiserror = "1.0.40"
eyre = "0.6.8"
