[package]
name = "planus-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal codegen library for planus."

[dependencies]
planus-types = { version = "1.0.0", path = "../planus-types" }
askama = "0.11"
heck = "0.4.1"
vec_map = "0.8.2"
random_color = "0.6.1"
thiserror = "1.0.40"
eyre = "0.6.8"
