[package]
name = "planus-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal codegen library for planus."

[dependencies]
askama.workspace = true
eyre.workspace = true
heck.workspace = true
random_color.workspace = true
thiserror.workspace = true
vec_map.workspace = true

# Our crates
planus-types.workspace = true
