[package]
name = "planus-inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal library for planus."

[dependencies]
planus-buffer-inspection = { version = "1.0.0", path = "../planus-buffer-inspection" }
planus-types = { version = "1.0.0", path = "../planus-types" }
planus-translation = { version = "1.0.0", path = "../planus-translation" }
tui = "0.19.0"
crossterm = "0.27.0"
color-eyre = "0.6.2"
fuzzy-matcher = "0.3.7"
