[package]
name = "planus-inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal library for planus."

[dependencies]
color-eyre.workspace = true
crossterm.workspace = true
fuzzy-matcher.workspace = true
ratatui.workspace = true

# Our crates
planus-buffer-inspection.workspace = true
planus-translation.workspace = true
planus-types.workspace = true
