[package]
name = "planus-lexer"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/planus-org/planus"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version = "1.61"
description = "Internal lexer library for planus."

[dependencies]
codespan = "0.11.1"
derive_more = "0.99.17"
logos = "0.12.1"
