[package]
name = "planus-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal lexer library for planus."

[dependencies]
codespan = "0.11.1"
derive_more = "0.99.17"
logos = "0.12.1"
