[package]
name = "planus-lexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal lexer library for planus."

[dependencies]
codespan.workspace = true
derive_more = { workspace = true, features = ["is_variant"] }
logos.workspace = true
