[package]
name = "planus-translation"
version = "0.3.1"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/planus-org/planus"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version = "1.61"
description = "Internal translation library for planus."

[dependencies]
planus-lexer = { version = "0.3.1", path = "../planus-lexer" }
planus-types = { version = "0.3.1", path = "../planus-types" }
atty = "0.2.14"
bitflags = "2.3.1"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
indexmap = "1.9.3"
lalrpop-util = "0.19.12"
num-traits = "0.2.15"
string-interner = "0.14.0"

[build-dependencies]
lalrpop = "0.19.12"
