[package]
name = "planus-translation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal translation library for planus."

[dependencies]
planus-lexer = { version = "0.4.0", path = "../planus-lexer" }
planus-types = { version = "0.4.0", path = "../planus-types" }
atty = "0.2.14"
bitflags = "2.3.1"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
indexmap = "1.9.3"
lalrpop-util = "0.20.0"
num-traits = "0.2.15"
string-interner = "0.14.0"

[build-dependencies]
lalrpop = "0.20.0"
