[package]
name = "planus-translation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal translation library for planus."

[dependencies]
bitflags.workspace = true
codespan-reporting.workspace = true
codespan.workspace = true
indexmap.workspace = true
lalrpop-util.workspace = true
num-traits.workspace = true
string-interner.workspace = true

# Our crates
planus-lexer.workspace = true
planus-types.workspace = true

[build-dependencies]
lalrpop.workspace = true
