[package]
name = "planus-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal type library for planus."

[dependencies]
planus-lexer = { version = "1.0.0", path = "../planus-lexer" }
codespan = "0.11.1"
lalrpop-util = "0.20.0"
indexmap = "1.9.3"
string-interner = "0.14.0"
