[package]
name = "planus-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version.workspace = true
description = "Internal type library for planus."

[dependencies]
codespan.workspace = true
indexmap.workspace = true
lalrpop-util.workspace = true
string-interner.workspace = true

# Our crates
planus-lexer.workspace = true
