[package]
name = "planus"
version = "0.3.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/planus-org/planus"
edition = "2021"
readme = "README.md"
keywords = ["flatbuffers", "serialization", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
rust-version = "1.61"
description = "Planus is an alternative compiler for flatbuffers, an efficient cross platform serialization library."

[dependencies]
array-init-cursor = { version = "0.2.0", path = "../array-init-cursor" }
hashbrown = { version = "0.13.1", optional = true, features = ["raw"] }

[dev-dependencies]
rand = "0.8.4"
planus-example = { path = "../../examples/rust" } # used for doctests

[features]
default = ["std", "vtable-cache", "string-cache", "bytes-cache"]
std = []
extra-validation = []
vtable-cache = ["hashbrown"]
string-cache = ["hashbrown"]
bytes-cache = ["hashbrown"]
