[package]
name = "rust-compat"
version.workspace = true
edition = "2018"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
std = ["planus/std", "serde/std"]
vtable-cache = ["planus/vtable-cache"]
string-cache = ["planus/string-cache"]
bytes-cache = ["planus/bytes-cache"]

[dependencies]
planus = { path = "../../crates/planus", default-features = false, features = [
  "extra-validation",
] }
serde = { version = "1.0.163", default-features = false, features = ["derive", "alloc"] }

[build-dependencies]
color-eyre = "0.6.2"
planus-codegen = { path = "../../crates/planus-codegen" }
planus-translation = { path = "../../crates/planus-translation" }
