[package]
name = "rust-compat"
version.workspace = true
edition = "2018"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std", "vtable-cache", "string-cache", "bytes-cache"]
std = ["planus/std", "serde/std"]
vtable-cache = ["planus/vtable-cache"]
string-cache = ["planus/string-cache"]
bytes-cache = ["planus/bytes-cache"]

[dependencies]
planus.workspace = true
serde.workspace = true

[build-dependencies]
color-eyre.workspace = true
planus-codegen.workspace = true
planus-translation.workspace = true
