[package]
edition = "2018"
license.workspace = true
name = "rust-compat"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
bytes-cache = ["planus/bytes-cache"]
default = ["std", "vtable-cache", "string-cache", "bytes-cache"]
std = ["planus/std", "serde/std"]
string-cache = ["planus/string-cache"]
vtable-cache = ["planus/vtable-cache"]

[dependencies]
planus.workspace = true
serde = { workspace = true, default-features = false, features = [
  "derive",
  "alloc",
] }

[build-dependencies]
color-eyre.workspace = true
planus-codegen.workspace = true
planus-translation.workspace = true
