[package]
name = "rust-test-2018"
version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
edition = "2018"
rust-version = "1.88"

[features]
default = ["std", "vtable-cache", "string-cache", "bytes-cache"]
std = ["planus/std", "serde/std"]
vtable-cache = ["planus/vtable-cache"]
string-cache = ["planus/string-cache"]
bytes-cache = ["planus/bytes-cache"]

[dependencies]
color-eyre.workspace = true
flatbuffers.workspace = true
planus.workspace = true
serde.workspace = true
static_assertions.workspace = true

[build-dependencies]
color-eyre.workspace = true
planus-codegen.workspace = true
planus-translation.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true

[[bench]]
name = "benchmark"
harness = false
