[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/planus-org/planus"
build = "build.rs"
rust-version = "1.61"

[features]
default = []
std = ["planus/std", "serde/std"]
vtable-cache = ["planus/vtable-cache"]
string-cache = ["planus/string-cache"]
bytes-cache = ["planus/bytes-cache"]

[dependencies]
color-eyre = "0.6.2"
planus = { path = "../../crates/planus", default-features = false, features = [
  "extra-validation",
] }
flatbuffers = "=23.1.21"
serde = { version = "1.0.132", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"

[build-dependencies]
color-eyre = "0.6.2"
planus-translation = { path = "../../crates/planus-translation" }
planus-codegen = { path = "../../crates/planus-codegen" }

[dev-dependencies]
criterion = "0.4"
serde_json = "1.0.73"
similar-asserts = "1.1.0"

[[bench]]
name = "benchmark"
harness = false
