[package]
name = "rust-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
rust-version.workspace = true

[features]
default = ["std", "vtable-cache", "string-cache", "bytes-cache"]
std = ["planus/std", "serde/std"]
vtable-cache = ["planus/vtable-cache"]
string-cache = ["planus/string-cache"]
bytes-cache = ["planus/bytes-cache"]

[dependencies]
color-eyre = "0.6.2"
planus = { path = "../../crates/planus", default-features = false, features = [
  "extra-validation",
] }
flatbuffers = { version = "=23.5.26", git = "https://github.com/google/flatbuffers.git", tag = "v23.5.26" }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"

[build-dependencies]
color-eyre = "0.6.2"
planus-translation = { path = "../../crates/planus-translation" }
planus-codegen = { path = "../../crates/planus-codegen" }

[dev-dependencies]
criterion = "0.5"
serde_json = "1.0.96"
similar-asserts = "1.4.2"

[[bench]]
name = "benchmark"
harness = false
