[package]
name = "rust-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
rust-version.workspace = true

[features]
default = ["std", "vtable-cache", "string-cache", "bytes-cache"]
std = ["planus/std", "serde/std"]
vtable-cache = ["planus/vtable-cache"]
string-cache = ["planus/string-cache"]
bytes-cache = ["planus/bytes-cache"]

[dependencies]
color-eyre = "0.6.2"
flatbuffers.workspace = true
planus = { workspace = true, default-features = false, features = [
  "extra-validation",
] }
serde = { workspace = true, default-features = false, features = ["derive"] }
static_assertions.workspace = true

[build-dependencies]
color-eyre.workspace = true
planus-codegen.workspace = true
planus-translation.workspace = true

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
similar-asserts.workspace = true

[[bench]]
name = "benchmark"
harness = false
