[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/TethysSvensson/planus"
build="build.rs"
rust-version = "1.57"

[dependencies]
anyhow = "1.0.51"
planus = { path = "../../planus" }
flatbuffers = "0.8.4"

[build-dependencies]
anyhow = "1.0.51"
planus-cli = { path = "../../planus-cli" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
